feat: added start_time and end_time to events
